--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,15 @@ name = "inverse-acronym"
 version = "0.1.0"
 description = ""
 authors = ["CarlosBueloni <carlosbueloni@gmail.com>"]
-readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-bs4 = "^0.0.2"
+python = "^3.10"
 requests = "^2.32.3"
-requests-html = "^0.10.0"
-unidecode = "^1.3.8"
+Unidecode = "^1.3.8"
+pytest = "^8.3.3"
 
+[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
